tests/positive/input_test_scopes.py
a = 3

if a == 5:
  a = 7
  b = 6

  b += 7

a += 8