tests/negative/input_test_scopes.py
while 3:
  a = 3
b = a + 3

a = 3